# rust_xp_ollama

./: Cargo.toml  README.md
.c02_context/: ctx.json
c04_data/: c04_embeddings_00.txt  c04_embeddings_01.txt  c04_embeddings_02.txt  c04_embeddings_03.txt  c04_embeddings_04.txt  c04_emeddings_00.json  c04_emeddings_01.json  c04_emeddings_02.json  c04_emeddings_03.json  c04_emeddings_04.json
examples/: c01_simple.rs  c02_context.rs  c03_chat.rs  c04_embedding.rs
src/: lib.rs
