[package]
name = "xp_ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"
unused = "allow"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
ollama-rs = { version = "0.1.0", features = ["stream"] }
simple-fs = { version = "0.1.0", features = ["full"] }
serde_json = "1.0.89"
derive_more = { version = "0.99.14", features = ["from"] }
